@@ -600,6 +600,22 @@ javac21)
   fi
   ;;
 
+javac22)
+  files=($(grep -Rl --include='*.java' ': Compilable with Java22' \
+        src/test/resources-noncompilable \
+        src/it/resources-noncompilable \
+        src/xdocs-examples/resources-noncompilable || true))
+  if [[  ${#files[@]} -eq 0 ]]; then
+    echo "No Java22 files to process"
+  else
+    mkdir -p target
+    for file in "${files[@]}"
+    do
+      javac --release 22 --enable-preview -d target "${file}"
+    done
+  fi
+  ;;
+
 package-site)
   ./mvnw -e --no-transfer-progress package -Passembly,no-validations
   ./mvnw -e --no-transfer-progress site -Dlinkcheck.skip=true
